# easy-onnx

./: .gitignore  CMakeLists.txt  README.md  test_file.py
CppApplication/: CMakeLists.txt  main.cpp
CppLibrary/: CMakeLists.txt  aiRunner.cpp  aiRunner.h
CppLibrary/Base/: Workflow.cpp
CppLibrary/Core/: DataLoader.cpp  DataLoader.h  Model.cpp  Model.h  Workflow.cpp  Workflow.h
CppLibrary/Utils/: pch.cpp  pch.h
CppLibrary/include/: DataLoader.h  Logger.h  Model.h  ModelManager.h  Utils.h  Workflow.h  aiRunner.h
CppLibrary/src/: DataLoader.cpp  Logger.cpp  Model.cpp  ModelManager.cpp  Utils.cpp  Workflow.cpp  aiRunner.cpp
TestProject/Assets/Scenes/: SampleScene.unity
TestProject/Assets/Scripts/: aiTester.cs
TestProject/ProjectSettings/: ProjectSettings.asset
UnityApplication/Assets/Scenes/: TestAI.unity
UnityApplication/Assets/Scripts/: AIRunning.cs  aiTester.cs
debugging/: CMakeLists.txt  main.cpp
